adjusting folders and files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,21 @@
 cmake_minimum_required(VERSION 3.20)
 project(gravity_lab LANGUAGES CXX)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(OpenGL REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
-find_package(glad CONFIG REQUIRED)
-find_package(glm CONFIG REQUIRED)
 
 add_executable(gravity_lab
     src/main.cpp
+    src/physics.cpp
+    src/render.cpp
 )
+
+target_include_directories(gravity_lab PRIVATE includes)
 
 target_link_libraries(gravity_lab PRIVATE
+    OpenGL::GL
     glfw
-    glad::glad
-    glm::glm
-    opengl32
 )
-
